--- a/product/product.html
+++ b/product/product.html
@@ -123,7 +123,15 @@
                     <span class="badge badge-success">61</span>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, consequatur
                         cupiditate dicta doloremque eligendi</p>
-                    <a href="#" class="btn btn-primary ">Contact</a>
+                    <span>
+                        <a href="#" class="btn btn-primary ">Contact</a>
+                          <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            More Options
+                          </button>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Report Account</a>
+                          </div>
+                    </span>
                 </div>
             </div>
         </div>
@@ -169,11 +177,14 @@
                 </dd>
 
                 <dt class="col-sm-3">
-                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Place Bid
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="product_itemOnWatchList.html">Add to Watchlist</a>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary">Place Bid</button>
+                        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="product_itemOnWatchList.html">Add to Watchlist</a>
+                        </div>
                     </div>
                 </dt>
                 <dd class="col-sm-3">
