--- a/product/product_asAdmin.html
+++ b/product/product_asAdmin.html
@@ -20,25 +20,25 @@
     <!-- fonts awesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
+    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/product.css">
 
-    <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet">
-
 
 </head>
 <body class="website-body">
-<!-- header -->
 <nav class="navbar navbar-light bg-light sticky-top navbar-expand-sm justify-content-around" id="header">
     <!-- logo -->
     <a href="../landing_page.html" class="navbar-brand extra-hide">BidBay</a>
     <!-- search bar -->
     <form action="../search.html" method="get" class="px-2" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
+            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search"
+                   id="search-input">
             <select class="form-control rounded-0 col-2 " id="search-categories">
-                <option selected> All Categories </option>
+                <option selected> All Categories</option>
                 <option>Technology</option>
                 <option>Automobiles</option>
                 <option>Clothes</option>
@@ -48,7 +48,8 @@
     </form>
     <!-- authentication links -->
     <div class="dropdown" id="authentication">
-        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
             JohnDoe39012
         </a>
@@ -104,7 +105,6 @@
                     <span class="display-4">Dell XPS 15</span>
                     <span class="badge badge-primary">Tech</span>
                     <span class="badge badge-info">New</span>
-                    <a href="product.html" class="fas fa-star text-warning" aria-hidden="true"></a>
                 </div>
             </div><!-- end row-->
         </div>
@@ -130,7 +130,8 @@
                             More Options
                           </button>
                           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Report Account</a>
+                            <a class="dropdown-item" href="#">View account reports</a>
+                            <a class="dropdown-item" href="#">Ban account</a>
                           </div>
                     </span>
                 </div>
@@ -158,9 +159,11 @@
             </li>
         </ul>
 
-        <span class="navbar-text">
-          <a href="#" class="badge badge-light">Report Item</a>
-        </span>
+        <span>
+        <a href="#" class="badge badge-danger">Cancel Auction</a>
+        <a href="#" class="badge badge-warning">Edit Auction</a>
+            </span>
+
     </nav>
     <!-- Tab panes -->
     <div class="tab-content" id="myTabContent">
@@ -177,28 +180,6 @@
                     Gaming graphics Card.
                 </dd>
 
-                <dt class="col-sm-3">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary">Place Bid</button>
-                        <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="product.html">Remove from Watchlist</a>
-                        </div>
-                    </div>
-                </dt>
-                <dd class="col-sm-3">
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">€</span>
-                        </div>
-                        <input type="text" class="form-control" aria-label="Amount (to the nearest euro)">
-                        <div class="input-group-append">
-                            <span class="input-group-text">.00</span>
-                        </div>
-                    </div>
-                </dd>
             </dl>
         </div>
         <div class="tab-pane fade" id="shippingAndPayment" role="tabpanel" aria-labelledby="shippingAndPayment-tab">
@@ -245,7 +226,8 @@
             <div class="review-block">
                 <div class="row">
                     <div class="col-sm-3">
-                        <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg" class="img-review img-fluid">
+                        <img src="https://vignette.wikia.nocookie.net/antagonist/images/8/8b/Mr._Burns.jpg"
+                             class="img-review img-fluid">
                         <div class="review-block-name"><a href="../profile_page.html">MrBurns</a></div>
                         <div class="review-block-date">March 01, 2018</div>
                     </div>
@@ -258,7 +240,9 @@
                             <span class="far fa-star" aria-hidden="true"></span>
                         </div>
                         <div class="review-block">Excellent seller, quick shipping A++++++</div>
-                        <a href="#" class="badge badge-light">Report Abuse</a>
+                        <a href="#" class="badge badge-danger">Remove Content</a>
+                        <a href="#" class="badge badge-warning">Edit Content</a>
+
                     </div>
                 </div>
             </div>
