--- a/profile/profile_asBanned.html
+++ b/profile/profile_asBanned.html
@@ -43,7 +43,7 @@
     <div class="dropdown" id="authentication">
         <a class="dropdown-toggle nav-link" href="#" role="button" id="authenticated-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <!-- place class extra-hide after a 5 characters if name too big to fit on smartphones -->
-            Administrator
+            Troll
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authenticated-dropdown" role="menu">
             <a class="dropdown-item" href="#">View Profile</a>
@@ -70,10 +70,7 @@
                 <p class="email">trollingpages@bidbay.com</p>
             </div>
             <div class="row">
-                <button type="button">Desban User</button>
-            </div>
-            <div class="row">
-                <button type="button">Change Ban Duration</button>
+                <button type="button">Appeal Ban</button>
             </div>
             <div class="row">
                 <p>14 days until ban ends</p>
