--- a/home/landing_page_admin.html
+++ b/home/landing_page_admin.html
@@ -37,14 +37,14 @@
     <!-- search bar -->
     <form action="search.html" method="get" class="" id="search-bar">
         <div class="d-flex">
-            <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search" id="search-input">
-            <select class="form-control rounded-0 col-2 " id="search-categories">
+            <input class="form-control rounded-1" type="search" placeholder="Search" aria-label="Search" id="search-input">
+            <select class="form-control rounded-1 col-2 " id="search-categories">
                 <option selected> All Categories </option>
                 <option>Technology</option>
                 <option>Automobiles</option>
                 <option>Clothes</option>
             </select>
-            <button class="btn btn-dark rounded-0 " type="submit"><i class="fas fa-search"></i></button>
+            <button class="btn btn-dark rounded-1 " type="submit"><i class="fas fa-search"></i></button>
         </div>
     </form>
     <!-- authentication links -->
@@ -78,29 +78,32 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <!-- carousel items here, change <img> <a> and the subtitle <h3> and <p> with appropriate data -->
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="d-block " src="https://placeimg.com/1600/900/tech" alt="First slide">
                     <div class="carousel-caption d-md-block">
-                        <h3>Some Item</h3>
-                        <p>15$, 5 bids</p>
+                        <h3>Another Newish Item</h3>
+                        <h4><strong class="display-4">15€</strong></h4>
+                        <h5>5 bids</h5>
                     </div>
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="d-block " src="https://placeimg.com/480/480/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
-                        <p>15$, 5 bids</p>
+                        <h4><strong class="display-4">15€</strong></h4>
+                        <h5>5 bids</h5>
                     </div>
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="d-block " src="https://placeimg.com/400/300/arch" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h3>Another Newish Item</h3>
-                        <p>15$, 5 bids</p>
+                        <h4><strong class="display-4">15€</strong></h4>
+                        <h5>5 bids</h5>
                     </div>
                 </a>
             </div>
@@ -122,13 +125,13 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Red Toyota car</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">The fastest car around, the 10 year old toyota legend which still holds
                             numerous records ...</p>
                         <p class="card-text">
@@ -138,11 +141,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Grey Camera</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Submitted 5 mins ago</small>
@@ -151,11 +154,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Samsung Tablet</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Submitted 5 mins ago</small>
@@ -164,11 +167,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">Pixel X2 4GB</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Submitted 5 mins ago</small>
@@ -177,11 +180,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">toyota motorcycle</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Submitted 5 mins ago</small>
@@ -190,11 +193,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some other new item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Submitted 5 mins ago</small>
@@ -212,13 +215,13 @@
         <div class="card-columns">
             <!-- reference to auction here -->
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <!-- place auction data here -->
                     <!-- images can be any size -->
                     <img class="card-img-top" src="https://placeimg.com/640/640/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">brand new headphones</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">A brand new headphone, only for the low low price of 5001$</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
@@ -227,11 +230,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/960/480/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
@@ -240,11 +243,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/nature" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
@@ -253,11 +256,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/480/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
@@ -266,11 +269,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/300/tech" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
@@ -279,11 +282,11 @@
                 </a>
             </div>
             <div class="card mb-3 mt-2 border-info">
-                <a href="../product.html">
+                <a href="../product/product.html">
                     <img class="card-img-top" src="https://placeimg.com/480/640/arch" alt="auction image">
                     <div class="card-body">
                         <h3 class="card-title">some item</h3>
-                        <p class="card-subtitle mb-2 text-muted"> 10$, 5 bids</p>
+                        <p class="card-subtitle mb-2 text-muted"><strong class="display-4">10€</strong> 5 bids</p>
                         <p class="card-text">Description: maybe the first 10 or 20 words ...</p>
                         <p class="card-text">
                             <small class="text-muted">Ending in 15 mins</small>
