--- a/register.html
+++ b/register.html
@@ -61,20 +61,54 @@
             <form action="home/landing_page_user.html" method="get" class="mt-5 d-flex flex-column mx-auto p-4 bg-light" id="register">
                 <h1 class="mx-auto pt-3 mb-5 font-weight-bold"> Register</h1>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Username:</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Username">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="username" aria-describedby="emailHelp" placeholder="Username" required>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email:</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email" required>
+                </div>
+                <div class="form-group mt-4">
+                    <label for="profile-picture">Profile Picture:</label>
+                    <input type="file" class="form-control-file" id="profile-picture">
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-6">
+                        <label for="first-name">First Name:</label>
+                        <input type="text" class="form-control" id="first-name" aria-describedby="emailHelp" placeholder="Country" required>
+                    </div>
+                    <div class="form-group col-6">
+                        <label for="last-name">Last Name:</label>
+                        <input type="text" class="form-control" id="last-name" aria-describedby="emailHelp" placeholder="Country" required>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <input type="text" class="form-control" id="address" aria-describedby="emailHelp" placeholder="Address" required>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-6 col-md-4">
+                        <label for="country">Country:</label>
+                        <input type="text" class="form-control" id="country" aria-describedby="emailHelp" placeholder="Country" required>
+                    </div>
+                    <div class="form-group col-6 col-md-4">
+                        <label for="city">City:</label>
+                        <input type="text" class="form-control" id="city" aria-describedby="emailHelp" placeholder="City" required>
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="zip-code">Zip-code:</label>
+                        <input type="text" class="form-control" id="zip-code" aria-describedby="emailHelp" placeholder="Zip-code" required>
+                    </div>
+                </div>
+                
+                <div class="form-group mt-4">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password" required>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password:</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Confirm Password:</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-enter Password">
+                    <label for="confirmPassword">Confirm Password:</label>
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Re-enter Password" required>
                 </div>
                 <a href="login.html" class="text-center mb-2">Already have an account? Login</a>
                 <button type="submit" class="btn btn-primary mx-auto w-50 mb-3 mt-4">Register</button>
